// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders #logged-out-links when the user is not logged in 1`] = `
<div
  id="logged-out-links"
>
  <NavLink
    activeClassName="active"
    aria-current="page"
    to="/register"
  >
    <WithStyles(Button)
      color="inherit"
    >
      Register
    </WithStyles(Button)>
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    to="/login"
  >
    <WithStyles(Button)
      color="inherit"
    >
      Login
    </WithStyles(Button)>
  </NavLink>
</div>
`;

exports[`Header renders a #logged-in-links when the user is logged in 1`] = `
<div
  id="logged-in-links"
>
  <NavLink
    activeClassName="active"
    aria-current="page"
    to="/logout"
  >
    <WithStyles(Button)
      color="inherit"
    >
      Logout
    </WithStyles(Button)>
  </NavLink>
</div>
`;

exports[`Header renders a material design AppBar 1`] = `
<WithStyles(AppBar)
  position="static"
>
  <WithStyles(Toolbar)>
    <WithStyles(IconButton)
      aria-label="Menu"
      className="menuButton"
      color="inherit"
    >
      <pure(Menu) />
    </WithStyles(IconButton)>
    <WithStyles(Typography)
      className="flex"
      color="inherit"
      variant="title"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        to="/"
      >
        Smarttodo
      </NavLink>
    </WithStyles(Typography)>
    <div
      id="logged-out-links"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        to="/register"
      >
        <WithStyles(Button)
          color="inherit"
        >
          Register
        </WithStyles(Button)>
      </NavLink>
      <NavLink
        activeClassName="active"
        aria-current="page"
        to="/login"
      >
        <WithStyles(Button)
          color="inherit"
        >
          Login
        </WithStyles(Button)>
      </NavLink>
    </div>
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;
